# raspberryPicoDroids

./: .gitignore  README.md
4wd/: README.md
4wd/docs/: logical_connections.dia
4wd/micropython/wifi_path_ioe_sr05/: commands.py  configuration.py  engines.py  ioe_sr05_pio.py  servo.py  servo_lib.py  wifi.py
docs/: links.txt
encoder_sensors_ble/: CMakeLists.txt  encoder_sensors_ble.kdev4
encoder_sensors_ble/.kdev4/: encoder_sensors_ble.kdev4
path_navigation/: 2enginesmove.c  2enginesmove.h  CMakeLists.txt  communication.c  communication.h  configuration.h  encoder_ble.c  make_move.h  path_navigation.kdev4  string_list.c  string_list.h
path_navigation/.kdev4/: path_navigation.kdev4
path_navigation_wifi/: 2enginesmove.c  CMakeLists.txt  configuration.h  encoder_ble.c  make_move.c  make_move.h  path_navigation_wifi.kdev4  server_wifi.c  server_wifi.h
path_navigation_wifi/.kdev4/: path_navigation_wifi.kdev4
round/: README.md
round/docs/: logical_lines.dia  power_lines.dia
round/encoder_sensors_ble/: 2enginesmove.c  encoder_ble.c
round/micropython/wifi_commands/: commands.py  configuration.py  engines.py  main.py  wifi.py
round/micropython/wifi_path/: commands.py  configuration.py  engines.py  main.py  path_navigation.py  wifi.py
round/path_navigation/: 2enginesmove.c  encoder_ble.c  make_move.c  string_list.c  string_list.h
round/path_navigation_wifi/: 2enginesmove.c  2enginesmove.h  configuration.h  string_list.h
zumo/: README.md
zumo/docs/: logical_connections.dia  logical_connections_ble.dia  power_lines.dia  power_lines_ble.dia
zumo/micropython/wifi_path_distance/: commands.py  configuration.py  engines.py  ioe_sr05_pio.py  main.py  wifi.py
zumo/path_navigation_wifi_distance/: 2enginesmove.c  CMakeLists.txt  configuration.h  encoder_ble.c  main_entry_wifi.c  make_move.c  make_move.h  move_commands.c  move_commands.h  move_encoder.c  move_encoder.h  move_list.c  move_list.h  moving-sensor_hc-sr04.c  moving-sensor_hc-sr04.h  moving-sensor_ioe_sr05.c  moving-sensor_ultrasonics.h  path_navigation.c  path_navigation.h  path_navigation_wifi_distance.kdev4  server_wifi.c  string_list.c  string_list.h
zumo/path_navigation_wifi_distance/.kdev4/: path_navigation_wifi_distance.kdev4
